Added registration/login/logout functionality from django.contrib.auth

--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -2,9 +2,13 @@
 {% load staticfiles %}
 
 {% block title_block %}
-	ENTER PAGE TITLE HERE
+	Logged Out
 {% endblock %}
 
 {% block body_block %}
-	
+<h1>Logged Out</h1>
+
+<p>
+	You have been successfully logged out.
+</p>
 {% endblock %}
