--- a/templates/registration/registration_closed.html
+++ b/templates/registration/registration_closed.html
@@ -2,9 +2,11 @@
 {% load staticfiles %}
 
 {% block title_block %}
-	ENTER PAGE TITLE HERE
+	Registration Closed
 {% endblock %}
 
 {% block body_block %}
-	
+<h1>Registration Closed</h1>
+
+<p>The registration is currently closed. Please try again later</p>
 {% endblock %}
