--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -2,9 +2,16 @@
 {% load staticfiles %}
 
 {% block title_block %}
-	ENTER PAGE TITLE HERE
+	Register
 {% endblock %}
 
 {% block body_block %}
+<h1>Register Here</h1>
+
+<form method="post" action=".">
+	{% csrf_token %}
 	
+	{{ form.as_p }}
+	
+	<input type="submit" value="Register">
 {% endblock %}
