Added registration html templates for password change

--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -2,9 +2,17 @@
 {% load staticfiles %}
 
 {% block title_block %}
-	ENTER PAGE TITLE HERE
+	Change Password
 {% endblock %}
 
 {% block body_block %}
+<h1>Change your Password</h1>
+
+<form method="post" action=".">
+	{% csrf_token %}
 	
+	{{ form.as_p }}
+	
+	<input type="submit" value="{% trans 'Submit' %}">
+</form>
 {% endblock %}
