--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -2,9 +2,11 @@
 {% load staticfiles %}
 
 {% block title_block %}
-	ENTER PAGE TITLE HERE
+	Password Changed
 {% endblock %}
 
 {% block body_block %}
-	
+<h1>Password Change done</h1>
+
+<p>{% trans "Password changed" %}</p>
 {% endblock %}
