--- a/templates/upskill_photography/base.html
+++ b/templates/upskill_photography/base.html
@@ -11,9 +11,31 @@
 	
 	<body>
 		<header>
+			<h1>Upskill Photography</h1>
+			<input>Search
+			{% if user.is_authenticated %}
+			<a href="{% url 'upskill_photography:index' %}">{{ user.username }}</a>
+			<a href="{% url 'auth_logout' %}?next=/">Logout</a>
+			{% else %}
+			<a href="{% url 'auth_login' %}">Login</a>
+			<a href="{% url 'registration_register' %}">Register Here</a>
+			{% endif %}
+			<p>
+				<a>Home</a>
+				<a>Discover</a>
+				<a>Categories</a>
+			</p>
 		</header>
 		
+		<div>
 		{% block body_block %}{% endblock %}
+		</div>
+		
+		<div>
+			<a>FAQ</a>
+			<a>Contact</a>
+			<a>About</a>
+		</div>
 		
 	</body>
 	
