--- a/templates/upskill_photography/base.html
+++ b/templates/upskill_photography/base.html
@@ -9,7 +9,7 @@
 		<meta name="description" content="Photo sharing website for hobby photographers">
 		<meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
 		<meta name="generator" content="Jekyll v3.8.5">
-		<link rel="icon" href="{% static  %}">
+		<link rel="icon" href="{% static 'images/favicon.ico' %}">
 		<title>
 			{% block title_block %}{% endblock %}
 		</title>
@@ -28,7 +28,7 @@
 			{% endif %}
 			<p>
 				<a>Home</a>
-				<a>Discover</a>
+				<a>Discovery</a>
 				<a>Categories</a>
 			</p>
 		</header>
