Added JQuery & Bootstrap to base.html - Added Simple Navigation Bar to base.html

--- a/templates/upskill_photography/base.html
+++ b/templates/upskill_photography/base.html
@@ -11,26 +11,51 @@
 		<meta name="generator" content="Jekyll v3.8.5">
 		<link rel="icon" href="{% static 'images/favicon.ico' %}">
 		<title>
-			{% block title_block %}{% endblock %}
+			{% block title_block %}{% endblock %} - Upskill Photography
 		</title>
+		
+		<!-- Bootstrap core CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	</head>
 	
 	<body>
 		<header>
-			<h1>Upskill Photography</h1>
-			<input>Search
-			{% if user.is_authenticated %}
-			<a href="{% url 'upskill_photography:index' %}">{{ user.username }}</a>
-			<a href="{% url 'auth_logout' %}?next=/">Logout</a>
-			{% else %}
-			<a href="{% url 'auth_login' %}">Login</a>
-			<a href="{% url 'registration_register' %}">Register Here</a>
-			{% endif %}
-			<p>
-				<a>Home</a>
-				<a>Discovery</a>
-				<a>Categories</a>
-			</p>
+			<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark p-0">
+				<a class="navbar-brand p-2" href="{% url 'upskill_photography:index' %}">Upskill Photography</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				
+				<form class="form-inline my-2 my-lg-0">
+					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+				</form>
+				
+				<div class="collapse navbar-collapse" id="navbarCollapse">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item"><a class="nav-link" href="{% url 'upskill_photography:index' %}">Home</a></li>
+						<li class="nav-item"><a class="nav-link" href="{% url 'upskill_photography:discovery' %}">Discovery</a></li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="{% url 'upskill_photography:categories' %}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Categories
+							</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<a class="dropdown-item" href="{% url 'upskill_photography:nature' %}">Nature</a>
+								<a class="dropdown-item" href="{% url 'upskill_photography:people' %}">People</a>
+								<a class="dropdown-item" href="{% url 'upskill_photography:architecture' %}">Architecture</a>
+								<a class="dropdown-item" href="{% url 'upskill_photography:astronomy' %}">Astronomy</a>
+							</div>
+						</li>
+						{% if user.is_authenticated %}
+						<li class="nav-item"><a class="nav-link" href="{% url 'upskill_photography:index' %}">{{ user.username }}</a></li>
+						<li class="nav-item"><a class="nav-link" href="{% url 'auth_logout' %}?next=/">Logout</a></li>
+						{% else %}
+						<li class="nav-item"><a class="nav-link" href="{% url 'auth_login' %}">Login</a></li>
+						<li class="nav-item"><a class="nav-link" href="{% url 'registration_register' %}">Register Here</a></li>
+						{% endif %}
+					</ul>
+				</div>
+			</nav>
 		</header>
 		
 		<div>
@@ -42,7 +67,10 @@
 			<a>Contact</a>
 			<a>About</a>
 		</div>
-		
+	
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	</body>
 	
 </html
