--- a/templates/upskill_photography/category_people.html
+++ b/templates/upskill_photography/category_people.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title_block %}
-	ENTER PAGE TITLE HERE
+	People Pictures
 {% endblock %}
 
 {% block body_block %}
