--- a/templates/upskill_photography/faq.html
+++ b/templates/upskill_photography/faq.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title_block %}
-	ENTER PAGE TITLE HERE
+	Frequently Asked Questions
 {% endblock %}
 
 {% block body_block %}
