--- a/templates/upskill_photography/user_profile.html
+++ b/templates/upskill_photography/user_profile.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title_block %}
-	ENTER PAGE TITLE HERE
+	{{ user.username }}'s Profile
 {% endblock %}
 
 {% block body_block %}
