improved page layout of base.html

--- a/templates/upskill_photography/base.html
+++ b/templates/upskill_photography/base.html
@@ -20,16 +20,13 @@
 	
 	<body>
 		<header>
-			<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark p-0">
+			<!--navbar-static-top-->
+			<!--fixed-top-->
+			<nav class="navbar navbar-expand-md navbar-dark static-top bg-dark p-0">
 				<a class="navbar-brand p-2" href="{% url 'upskill_photography:index' %}">Upskill Photography</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-				
-				<form class="form-inline my-2 my-lg-0">
-					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-				</form>
 				
 				<div class="collapse navbar-collapse" id="navbarCollapse">
 					<ul class="navbar-nav mr-auto">
@@ -55,17 +52,30 @@
 						{% endif %}
 					</ul>
 				</div>
+				
+				<form class="form-inline my-2 my-lg-0">
+					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+				</form>
 			</nav>
 		</header>
 		
-		<div>
-		{% block body_block %}{% endblock %}
-		</div>
-		
-		<div>
-			<a>FAQ</a>
-			<a>Contact</a>
-			<a>About</a>
+		<div class="container=fluid">
+			<div class="row">
+				<main role="main" class="w-50 mx-auto">
+					{% block body_block %}{% endblock %}
+					
+					<!-- Footer -->
+					<footer>
+						<p class="float-right"><a href="#">Back To Top</a></p>
+						<p>
+							<a href="{% url 'upskill_photography:faq' %}">FAQ</a><br>
+							<a href="{% url 'upskill_photography:contact' %}">Contact Us</a><br>
+							<a href="{% url 'upskill_photography:about' %}">About</a>
+						</p>
+					</footer>
+				</main>
+			</div>
 		</div>
 	
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
