--- a/templates/upskill_photography/base.html
+++ b/templates/upskill_photography/base.html
@@ -63,10 +63,12 @@
 		<div class="container=fluid">
 			<div class="row">
 				<main role="main" class="w-50 mx-auto">
+					<!-- Main Page Content - Done in Separate html files -->
 					{% block body_block %}{% endblock %}
 					
 					<!-- Footer -->
 					<footer>
+						<hr/>
 						<p class="float-right"><a href="#">Back To Top</a></p>
 						<p>
 							<a href="{% url 'upskill_photography:faq' %}">FAQ</a><br>
