--- a/templates/upskill_photography/user_profile.html
+++ b/templates/upskill_photography/user_profile.html
@@ -2,9 +2,9 @@
 {% load staticfiles %}
 
 {% block title_block %}
-	{{ user.username }}'s Profile
+	Someone's Profile
 {% endblock %}
 
 {% block body_block %}
-	
+	Someone's User Profile
 {% endblock %}
