--- a/templates/upskill_photography/search.html
+++ b/templates/upskill_photography/search.html
@@ -6,5 +6,12 @@
 {% endblock %}
 
 {% block body_block %}
+	<!-- Advanced Search Bar -->
+	<form class="form-inline mr-auto" action="{% url 'upskill_photography:search_result' %}" method="post">
+		{% csrf_token %}
+		<input class="form-control mr-sm-2" type="search" name="search_field" placeholder="Search" aria-label="Search">
+		<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+	</form>
+	
 	<strong>{{ query }}</strong>
 {% endblock %}
