--- a/templates/upskill_photography/search.html
+++ b/templates/upskill_photography/search.html
@@ -5,13 +5,11 @@
 	Search Result
 {% endblock %}
 
-{% block body_block %}
-	<!-- Advanced Search Bar -->
-	<form class="form-inline mr-auto" action="{% url 'upskill_photography:search_result' %}" method="post">
-		{% csrf_token %}
-		<input class="form-control mr-sm-2" type="search" name="search_field" placeholder="Search" aria-label="Search">
-		<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-	</form>
-	
-	<strong>{{ query }}</strong>
+{% block body_block %}	
+	<p><strong>{{ query }}</strong></p><br>
+	{% if results %}
+	{% for picture in results %}
+	<p>{{ picture.title }}</p>
+	{% endfor %}
+	{% endif %}
 {% endblock %}
