--- a/templates/upskill_photography/search.html
+++ b/templates/upskill_photography/search.html
@@ -8,8 +8,13 @@
 {% block body_block %}	
 	<p><strong>{{ query }}</strong></p><br>
 	{% if results %}
-	{% for picture in results %}
-	<p>{{ picture.title }}</p>
-	{% endfor %}
-	{% endif %}
+	<div class="row imagetiles">
+		{% for picture in results %}
+		<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12" >
+			<img src="{{ picture.thumbnail.url }}" class="img-thumbnail" alt="{{ picture.title }}">
+			<p>{{ picture.title }}</p>
+		</div>
+		{% endfor %}
+	</div>
+	{% endif %}	
 {% endblock %}
