--- a/templates/upskill_photography/picture_thumbnail.html
+++ b/templates/upskill_photography/picture_thumbnail.html
@@ -1,9 +1,17 @@
 {% load staticfiles %}
 
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12" >
+<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12" onclick="location.href='{% url 'upskill_photography:picture_view' picture.uploading_user picture.picture_id %}';"  style="cursor: pointer;">
 	<img src="{{ picture.thumbnail.url }}" class="img-thumbnail" alt="{{ picture.title }}">
 	<div class="font-italic text-nowrap overflow-hidden">{{ picture.title }}</div>
-	<div class="float-right">
-		{{ picture.views }}
-		<img src="{% static 'images/view.ico' %}" width="16" height="16">
+	<div class="text-nowrap overflow-hidden">
+		{{ picture.uploading_user.user.username }}
+		<div class="float-right">
+			{{ picture.views }}
+			<img src="{% static 'images/view.ico' %}" width="16" height="16">
+		</div><br>
+		<div class="float-right">
+			{{ picture.likes }}
+			<img src="{% static 'images/like_blank.ico' %}" width="16" height="16">
+		</div>
+	</div>
 </div>
