--- a/templates/upskill_photography/base.html
+++ b/templates/upskill_photography/base.html
@@ -51,6 +51,9 @@
 								{% endif %}
 							</div>
 						</li>
+						{% if user.is_authenticated %}
+						<li class="nav-item"><a class="nav-link" href="{% url 'upskill_photography:upload' %}">Upload a Picture</a></li>
+						{% endif %}
 					</ul>
 				</div>
 				<div class="w-20 mx-auto px-4">
