Developing Sorting Order functionality

--- a/templates/upskill_photography/picture_thumbnail.html
+++ b/templates/upskill_photography/picture_thumbnail.html
@@ -14,6 +14,7 @@
 			{{ picture.likes }}
 			<img src="{% static 'images/like_blank.ico' %}" width="16" height="16">
 		</div><br>
+		<span>{{ picture.timestamp }}</span><br>
 		{% if picture.latitude %}
 		{% if picture.longitude %}
 		<span>({{ picture.latitude }}, {{ picture.longitude }})</span>
