--- a/templates/upskill_photography/index.html
+++ b/templates/upskill_photography/index.html
@@ -3,51 +3,31 @@
 {% load staticfiles %}
 
 {% block title_block %}
-   INTRO PAGE
-<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-  window.initializeCarousel=()=>{
-    $("#carouselExampleIndicators").carousel{(interval:500)};
-    <style type="text/css">
-      .carousel-inner img{
-        width:100%;
-        height:150px;
-      }
-
-
-
-    </style>
+   Home
 {% endblock %}
 
 {% block body_block %}
-  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="..." class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
+{% if pictures %}
+<div id="carouselExampleIndicators" class="carousel slide w-75 mx-auto m-4" data-ride="carousel">
+	<div class="carousel-indicators">
+		<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 0"></button>
+		{% for i in counter %}
+		<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="{{ i }}" aria-label="Slide {{ i }}"></button>
+		{% endfor %}
+	</div>
+	
+	<div class="carousel-inner border border-dark rounded">
+		<div class="carousel-item active">
+			<img src="{{ first_picture.image.url }}" class="w-100" alt="{{ first_picture.title }}">
+		</div>
+		{% for picture in pictures %}
+		<div class="carousel-item">
+			<img src="{{ picture.image.url }}" class="w-100" alt="{{ picture.title }}">
+		</div>
+		{% endfor %}
+	</div>
+</div>
+{% endif %}
 
   {% block content %}
     {% for post in posts %}
