Added Page content for categories

--- a/templates/upskill_photography/discovery.html
+++ b/templates/upskill_photography/discovery.html
@@ -9,7 +9,7 @@
 {% block body_block %}
 	<div class="bg-dark row rounded-bottom d-flex">
 		<div class="px-4">
-			<p class="text-light"><strong>Discover Pictures</strong></p>
+			<p class="text-light"><strong>{{ category.name }} Pictures</strong></p>
 		</div>
 		
 		
@@ -22,8 +22,8 @@
 				<option value="likes" {% if sort_style == 'likes' %}selected{% endif %}>Likes</option>
 			</select>
 			<select class="form-select bg-dark text-light" aria-label="Sorting Order" name="sort_order">
-				<option value="asc" {% if sort_order == 'asc' %}selected{% endif %}>Ascending</option>
 				<option value="desc" {% if sort_order == 'desc' %}selected{% endif %}>Descending</option>
+				<option value="asc" {% if sort_order == 'asc' %}selected{% endif %}>Ascending</option>
 			</select>
 			<button class="bg-transparent btn-outline-success" type="submit">Reload</button>
 		</form>
