--- a/templates/upskill_photography/category.html
+++ b/templates/upskill_photography/category.html
@@ -1,5 +1,6 @@
 {% extends 'upskill_photography/base.html' %}
 {% load staticfiles %}
+{% load upskill_photography_template_tags %}
 
 {% block title_block %}
 	{% if category %}
@@ -11,7 +12,34 @@
 
 {% block body_block %}
 	{% if category %}
-	{{ category.name }} Category
+	<div class="bg-dark row rounded-bottom d-flex">
+		<div class="px-4">
+			<p class="text-light"><strong>{{ category.name }} Pictures</strong></p>
+		</div>
+		
+		
+		<form class="ml-auto px-4 text-light" action="{% url 'upskill_photography:discovery' %}" method="post">
+			{% csrf_token %}
+			Sort By: 
+			<select class="form-select bg-dark text-light" aria-label="Sorting Style" name="sort_style">
+				<option value="new" {% if sort_style == 'new' %}selected{% endif %}>Upload Time</option>
+				<option value="views" {% if sort_style == 'views' %}selected{% endif %}>Views</option>
+				<option value="likes" {% if sort_style == 'likes' %}selected{% endif %}>Likes</option>
+			</select>
+			<select class="form-select bg-dark text-light" aria-label="Sorting Order" name="sort_order">
+				<option value="desc" {% if sort_order == 'desc' %}selected{% endif %}>Descending</option>
+				<option value="asc" {% if sort_order == 'asc' %}selected{% endif %}>Ascending</option>
+			</select>
+			<button class="bg-transparent btn-outline-success" type="submit">Reload</button>
+		</form>
+	</div>
+	{% if pictures %}
+	<div class="row imagetiles">
+		{% for picture in pictures %}
+			{% get_picture_thumbnail picture %}
+		{% endfor %}
+	</div>
+	{% endif %}	
 	{% else %}
 	This category does not exist
 	{% endif %}
