--- a/templates/upskill_photography/index.html
+++ b/templates/upskill_photography/index.html
@@ -19,17 +19,25 @@
 		
 		<div class="carousel-inner border border-dark rounded">
 			<div class="carousel-item active">
-				<img src="{{ first_picture.image.url }}" class="w-100" alt="{{ first_picture.title }}">
+				<a href="{% url 'upskill_photography:picture_view' first_picture.uploading_user.user.username first_picture.picture_id %}">
+					<img src="{{ first_picture.image.url }}" class="w-100" alt="{{ first_picture.title }}">
+				</a>
 				<div class="carousel-caption d-none d-md-block">
-					<h5 class="text-dark" style="text-shadow: 1px 1px #ffffff"><strong>{{ first_picture.uploading_user.user.username }}</strong></h5>
+					<a href="{% url 'upskill_photography:userprofile' first_picture.uploading_user.user.username %}">
+						<h5 class="text-dark" style="text-shadow: 1px 1px #ffffff"><strong>{{ first_picture.uploading_user.user.username }}</strong></h5>
+					</a>
 					<p class="text-dark" style="text-shadow: 1px 1px #ffffff"><strong>{{ first_picture.title }}</strong></p>
 				</div>
 			</div>
 			{% for picture in pictures %}
 			<div class="carousel-item">
-				<img src="{{ picture.image.url }}" class="w-100" alt="{{ picture.title }}">
+				<a href="{% url 'upskill_photography:picture_view' picture.uploading_user.user.username picture.picture_id %}">
+					<img src="{{ picture.image.url }}" class="w-100" alt="{{ picture.title }}">
+				</a>
 				<div class="carousel-caption d-none d-md-block">
-					<h5 class="text-dark" style="text-shadow: 1px 1px #ffffff"><strong>{{ picture.uploading_user.user.username }}</strong></h5>
+					<a href="{% url 'upskill_photography:userprofile' picture.uploading_user.user.username %}">
+						<h5 class="text-dark" style="text-shadow: 1px 1px #ffffff"><strong>{{ picture.uploading_user.user.username }}</strong></h5>
+					</a>
 					<p class="text-dark" style="text-shadow: 1px 1px #ffffff"><strong>{{ picture.title }}</strong></p>
 				</div>
 			</div>
