More work on the thumbnail tile

--- a/templates/upskill_photography/discovery.html
+++ b/templates/upskill_photography/discovery.html
@@ -9,7 +9,7 @@
 {% block body_block %}
 	<div class="bg-dark row rounded-bottom d-flex">
 		<div class="px-4">
-			<p class="text-light"><strong>{{ category.name }} Pictures</strong></p>
+			<p class="text-light"><strong>Discover Pictures</strong></p>
 		</div>
 		
 		
