--- a/templates/upskill_photography/picture_thumbnail.html
+++ b/templates/upskill_photography/picture_thumbnail.html
@@ -1,7 +1,9 @@
 {% load staticfiles %}
 
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12" onclick="location.href='{% url 'upskill_photography:picture_view' picture.uploading_user picture.picture_id %}';" style="cursor: pointer;">
-	<img src="{{ picture.thumbnail.url }}" class="img-thumbnail" alt="{{ picture.title }}">
+<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12 mh-25">
+	<a class="img-wrapper" href="{% url 'upskill_photography:picture_view' picture.uploading_user picture.picture_id %}">
+		<img src="{{ picture.thumbnail.url }}" class="img-thumbnail img-responsive" alt="{{ picture.title }}">
+	</a>
 	<div class="font-italic text-nowrap overflow-hidden">{{ picture.title }}</div>
 	<div class="text-nowrap overflow-hidden">
 		<a href="{% url 'upskill_photography:userprofile' picture.uploading_user %}" style="color: black"><span>{{ picture.uploading_user.user.username }}</span></a>
