--- a/templates/upskill_photography/upload.html
+++ b/templates/upskill_photography/upload.html
@@ -6,17 +6,14 @@
 {% endblock %}
 
 {% block body_block %}
-	<h2>upload</h2>
-    <form method="post" enctype="multipart/form-data">
-         {% csrf_token %}
-        <input type="file" name="document">
-        <button type="submit">upload file</button>
-    </form>
-    {% if url %}
-    <p>Uploaded file:<a href="{{ url }}">{{ url }}</a></p>
-
-
-
+<h2> Upload</h2>
+<form method="post" enctype="multipart/form-data">
+   {% csrf_token %)
+<input type="file" namee="document">
+<button type="submit"></button>
+</form>
+   {% if url %}
+   <p> Uploaded file:<a href="{{ url }}">{{ url }}</a></p>
 {% endblock %}
 
 © 2021 GitHub, Inc.
