--- a/templates/upskill_photography/upload.html
+++ b/templates/upskill_photography/upload.html
@@ -7,11 +7,12 @@
 
 {% block body_block %}
 <h2> Upload</h2>
-<form method="post" enctype="multipart/form-data">
-   {% csrf_token %)
-<input type="file" namee="document">
-<button type="submit"></button>
+<form method="post" action="{% url 'upskill_photography:upload' %}" enctype="multipart/form-data">
+	{% csrf_token %}
+	<input type="file" name="document">
+	<button type="submit">Submit</button>
 </form>
    {% if url %}
    <p> Uploaded file:<a href="{{ url }}">{{ url }}</a></p>
+   {% endif %}
 {% endblock %}
