--- a/templates/upskill_photography/base.html
+++ b/templates/upskill_photography/base.html
@@ -55,13 +55,13 @@
 					</ul>
 				</div>
 				<div class="w-20 mx-auto px-4">
-					<ul class="list-group list-group-flush bg-transparent">
+					<ul class="list-group list-group-flush bg-transparent" style="list-style-type:none">
 						{% if user.is_authenticated %}
-						<a class="list-group-item list-group-item-action bg-transparent text-light" href="{% url 'upskill_photography:index' %}">{{ user.username }}</a>
-						<a class="list-group-item list-group-item-action bg-transparent text-light" href="{% url 'auth_logout' %}?next=/">Logout</a>
+						<li><a class="list-group-item list-group-item-action bg-transparent text-light" href="{% url 'upskill_photography:index' %}">{{ user.username }}</a></li>
+						<li><a class="list-group-item list-group-item-action bg-transparent text-light" href="{% url 'auth_logout' %}?next=/">Logout</a></li>
 						{% else %}
-						<a class="list-group-item list-group-item-action bg-transparent text-light" href="{% url 'registration_register' %}">Register</a>
-						<a class="list-group-item list-group-item-action bg-transparent text-light" href="{% url 'auth_login' %}">Login</a>
+						<li><a class="list-group-item list-group-item-action bg-transparent text-light" href="{% url 'registration_register' %}">Register</a></li>
+						<li><a class="list-group-item list-group-item-action bg-transparent text-light" href="{% url 'auth_login' %}">Login</a></li>
 						{% endif %}
 					</ul>
 				</div>
