--- a/templates/upskill_photography/picture_thumbnail.html
+++ b/templates/upskill_photography/picture_thumbnail.html
@@ -2,7 +2,7 @@
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12 mh-25">
 	<a class="img-wrapper" href="{% url 'upskill_photography:picture_view' picture.uploading_user picture.picture_id %}">
-		<img src="{{ picture.thumbnail.url }}" class="img-thumbnail img-responsive" alt="{{ picture.title }}">
+		<img src="{{ picture.thumbnail.url }}" class="img-thumbnail img-responsive rounded" alt="{{ picture.title }}">
 	</a>
 	<div class="font-italic text-nowrap overflow-hidden">{{ picture.title }}</div>
 	<div class="text-nowrap overflow-hidden">
