--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block body_block %}
-<h1>Password Change done</h1>
+<h3>Password Changd Successfully</h3>
 
-<p>{% trans "Password changed" %}</p>
+<h4><a href="{% url 'upskill_photography:index' %}">Back to Home</a></h4>
 {% endblock %}
