--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -13,6 +13,6 @@
 	
 	{{ form.as_p }}
 	
-	<input type="submit" value="{% trans 'Submit' %}">
+	<input type="submit" value="Change My Password">
 </form>
 {% endblock %}
