--- a/templates/upskill_photography/picture_thumbnail.html
+++ b/templates/upskill_photography/picture_thumbnail.html
@@ -1,12 +1,12 @@
 {% load staticfiles %}
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12 mh-25">
-	<a class="img-wrapper" href="{% url 'upskill_photography:picture_view' picture.uploading_user picture.picture_id %}">
+	<a class="img-wrapper" href="{% url 'upskill_photography:picture_view' picture.uploading_user.user.username picture.picture_id %}">
 		<img src="{{ picture.thumbnail.url }}" class="img-thumbnail img-responsive rounded" alt="{{ picture.title }}">
 	</a>
 	<div class="font-italic text-nowrap overflow-hidden">{{ picture.title }}</div>
 	<div class="text-nowrap overflow-hidden">
-		<a href="{% url 'upskill_photography:userprofile' picture.uploading_user %}" style="color: black"><span>{{ picture.uploading_user.user.username }}</span></a>
+		<a href="{% url 'upskill_photography:userprofile' picture.uploading_user.user.username %}" style="color: black"><span>{{ picture.uploading_user.user.username }}</span></a>
 		<div class="float-right">
 			{{ picture.views }}
 			<img src="{% static 'images/view.ico' %}" alt="Views Icon" width="16" height="16">
