Change Profile Picture Functionality

--- a/templates/upskill_photography/base.html
+++ b/templates/upskill_photography/base.html
@@ -70,7 +70,7 @@
 		
 		<div class="container=fluid">
 			<div class="row">
-				<main role="main" class="w-75 mx-auto">
+				<main role="main" class="w-75 mx-auto pb-4">
 					<!-- Main Page Content - Done in Separate html files -->
 					{% block body_block %}{% endblock %}
 				</main>
