More Minor Fixes

--- a/templates/upskill_photography/picture_thumbnail.html
+++ b/templates/upskill_photography/picture_thumbnail.html
@@ -19,7 +19,7 @@
 		<span>{{ picture.timestamp | date:"F d Y" }}</span><br>
 		{% if picture.latitude %}
 		{% if picture.longitude %}
-		<span>Location Available</span>
+		<span class="text-muted">Location Available</span>
 		{% endif %}
 		{% endif %}
 	</div>
